# voice-sync

./: .replit  LIPSYNC_FEATURE_SPEC.md  TESTING_SOUND_REGENERATION.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Problem-Statement-for-Replacement-Agent-Feature-Voice-Filter-Pipeline-4-Apply-acoustic-effects--1760929510048_1760929510049.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AlignmentReport.tsx  PacingReport.tsx  SoundDesignReport.tsx  VadPacingAnalysis.tsx  app-sidebar.tsx  download-section.tsx  file-upload-zone.tsx  processing-timeline.tsx  quality-meter.tsx  theme-provider.tsx  transcription-editor.tsx  voice-clone-card.tsx
client/src/pages/: create.tsx  edit-video.tsx  projects.tsx  settings.tsx  voices.tsx
python-services/sound-detection/: Dockerfile  README.md  RENDER_DEPLOYMENT.md  app.py  pyproject.toml  render.yaml  requirements.txt  start.sh
server/: db.ts  elevenlabs.ts  ffmpeg.ts  logger.ts  objectStorage.ts  pacing-analyzer.ts  replicate.ts  routes.ts  segment-aligner.ts  sound-detector.ts  sound-regenerator.ts  storage.ts  synclabs.ts  transcription.ts  vad-service.py
shared/: schema.ts
