[project]
name = "sound-detection-service"
version = "1.0.0"
description = "Sound detection microservice using PANNs"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0",
    "panns-inference>=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
